2012-07-26  Hans Rakers <hans at rakers.org>

	* fixed compilation of ea_dasm.c against php < 5.4
	* fixed handling of hashes for php < 5.4
	* disabled MM_CHECK by default because it is broken and causes segfaults when
	  shared memory is exhausted (debug builds only).

2012-07-19  Hans Rakers <hans at rakers.org>

	* PHP-5.4 compatibility
	* Fixed a segfault when restoring class doc comments from
	  disk cache
	* Storing doc comments in cache is default now since most
	  frameworks require this (Reflection API).
	* Re-indented all files using astyle and bumped year

2010-07-28  Bart Vanbrabant <bart at vanbrabant.eu>

	* Make the error message about creating the cache directory more
	  clear.

2010-07-26  Hans Rakers <hans at react.nl>

	* Fix for ticket #432. The optimizer would eliminate the final
	  ZEND_RETURN of an op array if the script ended with a switch
	  statement. Last opcodes ZEND_BRK, ZEND_JMP, ZEND_JMP,
	  ZEND_RETURN. ZEND_BRK gets optimized to a JMP, which is a JMP
	  to RETURN so gets eliminated. Other 2 JMPs get eliminated,
	  RETURN loses all predecessors, and thus gets eliminated aswell,
	  resulting in a crash. Problem ended up being in the handling of
	  the ZEND_BRK to ZEND_JMP optimization. /long story

2010-07-11  Bart Vanbrabant <bart@vanbrabant.eu>

	* Changed the way the cache directory is created:
	- The forked process creates the cache dir and makes it world writable
	- The first request creates a subdir with the userid of the process and
	with permissions 700.

	* Comment out an unused function to support compilin with -Werror
	* Add sched.h include to fix a compiler warning

2010-06-03  Hans Rakers <hans at react.nl>

	* Fixed compilation against php-5.1. This closes ticket #426.

2010-02-25  Hans Rakers <hans at react.nl>

	* Fixed class static variable restore where parent was protected
	  static and child was public static. This would lead to error
	  'Access to undeclared static property' upon restore from cache