@@ -18,4 +18,4 @@ ltmain.sh
 missing
 mkinstalldirs
 run-tests.php
-
+*~
